# vdl

./: Cargo.toml  LICENSE  README.md  config.example.yaml
src/: cli.rs  config.rs  downloader.rs  main.rs  sandbox.rs  tui.rs
src/commands/: config_cmd.rs  ig.rs  mod.rs  sp.rs  tk.rs  tw.rs  update.rs  yt.rs
