[package]
name = "vdl"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
description = "A fast, interactive terminal video downloader for YouTube, TikTok, Instagram, Twitter and Spotify"
repository = "https://github.com/oraclevs/vdl"
homepage = "https://github.com/oraclevs/vdl"
documentation = "https://docs.rs/vdl"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["video", "downloader", "youtube", "tiktok", "cli"]
categories = ["command-line-utilities", "multimedia::video"]
exclude = [
  ".github/**",
  "*.log",
  "output/**",
  "libs/**",

]

[[bin]]
name = "vdl"
path = "src/main.rs"

[dependencies]
yt-dlp        = { version = "2.6.0", features = ["cache-memory", "rustls"] }
tokio         = { version = "1", features = ["full"] }
clap          = { version = "4", features = ["derive", "string"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
serde_yaml    = "0.9"
anyhow        = "1"
indicatif     = "0.17"
console       = "0.15"
dialoguer     = "0.11"
colored       = "2"
dirs          = "5"
tokio-stream  = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
# reqwest 0.13 routes its rustls backend through rustls-platform-verifier on Android,
# which panics in Termux because there is no hosted JVM to initialize the verifier.
# Enabling native-tls for Android forces reqwest's default backend away from that path.
reqwest       = { version = "0.13.2", default-features = false, features = ["native-tls", "json", "stream"] }
